--- a/demo/src/main/resources/static/css/login_user.css
+++ b/demo/src/main/resources/static/css/login_user.css
@@ -47,7 +47,7 @@ body {
     margin: auto;
     position: relative;
     transform: translateY(0);
-    min-height: fit-content;  /* Ensure container fits content */
+    min-height: fit-content;
 }
 
 .form-container {
