--- a/demo/src/main/resources/static/css/styles.css
+++ b/demo/src/main/resources/static/css/styles.css
@@ -9,7 +9,7 @@ h2,
 h3 {
   font-family: "shiba-font", sans-serif;
 }
-/* Reset and Base Styles */
+
 * {
   margin: 0;
   padding: 0;
@@ -19,7 +19,6 @@ h3 {
 }
 
 /* Reveal Animation */
-
 .hidden {
   opacity: 0;
   transform: translateY(50px);
@@ -293,6 +292,7 @@ h3 {
 .hero-text {
   max-width: 36rem;
   color: white;
+  font-family: "shiba-font", sans-serif;
 }
 
 .hero-text h1 {
@@ -301,12 +301,14 @@ h3 {
   margin-bottom: 1.5rem;
   line-height: 1.2;
   color: #fc7a43;
+  font-family: "shiba-font", sans-serif;
 }
 
 .hero-text p {
   font-size: 1.125rem;
   margin-bottom: 2rem;
   line-height: 1.6;
+  font-family: "shiba-font", sans-serif;
 }
 
 .hero-buttons {
@@ -404,6 +406,7 @@ h3 {
   margin-bottom: 1rem;
   color: #4c1d95;
   line-height: 1.4;
+  font-family: "shiba-font", sans-serif;
 }
 
 .service-text form {
@@ -432,7 +435,7 @@ h3 {
 .hero-read-more {
   display: inline-block;
   width: 100%;
-  background: linear-gradient(135deg, #8b5cf6 0%, #7c3aed 100%);
+  background-color: #8b5cf6;
   color: white;
   padding: 0.875rem 1.75rem;
   border-radius: 0.75rem;
@@ -445,7 +448,7 @@ h3 {
   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
   position: relative;
   overflow: hidden;
-  box-shadow: 0 4px 12px rgba(139, 92, 246, 0.25);
+  box-shadow: 0 4px 12px rgba(138, 92, 246, 0.151);
 }
 
 .hero-read-more::before {
