--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -60,7 +60,7 @@
       <figure class="hero-image">
         <img src="/assets/images/hero.png" alt="Hero Image" class="hero-img" />
       </figure>
-      <div class="hero-content">
+      <div class="hero-content scroll-reveal">
         <article class="hero-text">
           <h1>La Clínica Veteriaria<br />de Mayor Impacto en<br />Colombia</h1>
           <p>
@@ -70,14 +70,14 @@
             salud animal.
           </p>
 
-          <div class="hero-buttons">
+          <div class="hero-buttons scroll-reveal">
             <a href="#cta" class="btn primary">Contáctanos</a>
             <a href="/login" class="btn secondary">Ingresa al portal</a>
           </div>
         </article>
 
-        <section class="floating-card">
-          <article class="service-item">
+        <section class="floating-card scroll-reveal">
+          <article class="service-item scroll-reveal">
             <figure>
               <img
                 src="https://images.unsplash.com/photo-1576201836106-db1758fd1c97?w=150"
@@ -89,7 +89,7 @@
               </figcaption>
             </figure>
           </article>
-          <article class="service-item">
+          <article class="service-item scroll-reveal">
             <figure>
               <img
                 src="https://images.unsplash.com/photo-1537151608828-ea2b11777ee8?w=150"
