hotfix: hero background image

--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -58,7 +58,10 @@
     <!-- Hero Section -->
     <section id="hero" class="hero">
       <figure class="hero-image">
-        <img src="/assets/images/hero.png" alt="Hero Image" class="hero-img" />
+        <img
+          src="https://images.unsplash.com/photo-1597662942561-776cff97660d?q=80&w=2946&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          alt="Hero Image"
+          class="hero-img" />
       </figure>
       <div class="hero-content scroll-reveal">
         <article class="hero-text">
