--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
         <div class="nav-center">
           <a href="#" class="nav-link active">Inicio</a>
           <a href="/specialties" class="nav-link">Especialidades</a>
-          <a href="#" class="nav-link">Blog</a>
+          <a href="/blog" class="nav-link">Blog</a>
           <a href="#cta" class="nav-link">Contacto</a>
         </div>
 
@@ -336,7 +336,7 @@
               <span class="tag">Datos Curiosos</span>
               <span class="tag">Gatos</span>
             </div>
-            <a href="#" class="read-more-button">Leer más</a>
+            <a href="/blog" class="read-more-button">Leer más</a>
           </div>
         </article>
 
@@ -351,7 +351,7 @@
               <span class="tag">Perros</span>
               <span class="tag">Gatos</span>
             </div>
-            <a href="#" class="read-more-button">Leer más</a>
+            <a href="/blog" class="read-more-button">Leer más</a>
           </div>
         </article>
 
@@ -368,7 +368,7 @@
               <span class="tag">Datos Curiosos</span>
               <span class="tag">Perros</span>
             </div>
-            <a href="#" class="read-more-button">Leer más</a>
+            <a href="/blog" class="read-more-button">Leer más</a>
           </div>
         </article>
 
@@ -386,7 +386,7 @@
               <span class="tag">Datos Curiosos</span>
               <span class="tag">Perros</span>
             </div>
-            <a href="#" class="read-more-button">Leer más</a>
+            <a href="/blog" class="read-more-button">Leer más</a>
           </div>
         </article>
       </div>
